kuard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  namespace: kuard
spec:
  tls:
  - hosts:
    - kuard.kind.dilerous.cloud
    secretName: kuard-wildcard-tls
  rules:
  - host: kuard.kind.dilerous.cloud
    http:
      paths:
      - backend:
          service:
            name: kuard
            port:
              number: 80
        path: /
        pathType: Prefix
